--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum</title>
     <link rel="stylesheet" href="estilo.css">
+    <script src="https://kit.fontawesome.com/10cd40c78e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main class="container_arreglo_de_fondo">
@@ -17,6 +18,67 @@
                 <h2>Analista Programador</h2>
             </section>
         </header>
+        <section>
+            <h3>Perfil Profesional </h3>
+            <hr>
+            <p> Hermano es god </p>
+        </section>
+        <section>
+            <h3><i class="fas fa-cogs"></i>Habilidades</h3>
+            <hr>
+            <ul>
+                <li>Trabajo en equipo</li>
+                <li>Gestion de Proyectos</li>
+                <li>Liderazgo</li>
+            </ul>
+        </section>
+        <section>
+            <h3><i class="fas fa-language "></i>Idiomas</h3>
+            <hr>
+            <ul>
+                <li>Español</li>
+                <li>Ingles</li>
+                <li>Aleman</li>
+            </ul>
+        </section>
+        <section>
+            <h3><i class="fas fa-envelope"></i> Informacion de Contacto</h3>
+            <hr>
+            <address>
+                <p>Email:correo@gmail.com</p>
+                <p>Telefono : +569 12345678</p>
+                <p>LinkeIn <a href="#"> Perfil de LinkeIn</a></p>
+            </address>
+        </section>
+        <section>
+            <h3><i class="fas fa-briefcase"></i> Experiencia Laboral</h3>
+            <hr>
+            <article>
+                <h4>Puesto</h4>
+                <p><strong>Nombre Empresa</strong> (2014-2020)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+            <article>
+                <h4>Puesto</h4>
+                <p><strong>Nombre Empresa</strong> (2014-2020)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+        </section>
+        
+        <section>
+            <h3><i class="fas fa-graduation-cap"></i> Formación</h3>
+            <hr>
+            <article>
+                <h4>Carrera o Diplomado</h4>
+                <p><strong>Nombre de Colegio</strong> (2002-2006)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+            <article>
+                <h4>Carrera o Diplomado</h4>
+                <p><strong>Nombre de Colegio</strong> (2007-2008)</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </article>
+        </section>
     </main>
 </body>
 </html>
