--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             <ul>
                 <li>Español</li>
                 <li>Ingles</li>
-                <li>Aleman</li>
             </ul>
         </section>
         <section>
@@ -47,7 +46,7 @@
             <address>
                 <p>Email:correo@gmail.com</p>
                 <p>Telefono : +569 12345678</p>
-                <p>LinkeIn <a href="#"> Perfil de LinkeIn</a></p>
+                <p>LinkeIn <a href="https://cl.linkedin.com/"> Perfil de LinkeIn</a></p>
             </address>
         </section>
         <section>
@@ -55,13 +54,8 @@
             <hr>
             <article>
                 <h4>Puesto</h4>
-                <p><strong>Nombre Empresa</strong> (2014-2020)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
-            <article>
-                <h4>Puesto</h4>
-                <p><strong>Nombre Empresa</strong> (2014-2020)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p><strong>Trabajo en repacion computadores </strong> (2019-actualidad)</p>
+                <p>Reparacion basada en cambio de piezas de computadores, formateos o limpiezas. </p>
             </article>
         </section>
         
@@ -69,15 +63,14 @@
             <h3><i class="fas fa-graduation-cap"></i> Formación</h3>
             <hr>
             <article>
-                <h4>Carrera o Diplomado</h4>
-                <p><strong>Nombre de Colegio</strong> (2002-2006)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
+                <h4>Basica</h4>
+                <p><strong>Edelmira Vergara</strong> (2010-2017)</p>            </article>
             <article>
-                <h4>Carrera o Diplomado</h4>
-                <p><strong>Nombre de Colegio</strong> (2007-2008)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h4>Media</h4>
+                <p><strong>Liceo San Felipe de Arauco</strong> (2018-2021)</p> 
             </article>
+                <h4>Carrera</h4>
+                <p><strong>Analista Programador</strong> (2024-actualidad)</p> 
         </section>
     </main>
 </body>
